--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "devDependencies": {
     "vitest": "^1.3.1"
   },
-
   "scripts": {
     "test": "vitest"
+  },
+  "dependencies": {
+    "express": "^4.18.3"
   }
 }
